# RoboSafeSentinel

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.bat  run.ps1
.github/workflows/: ci.yml
config/: config.example.yaml  production.yaml
data/templates/: RoboSafe_Analyse_Risques.xlsx  RoboSafe_Architecture_Integration.xlsx  RoboSafe_Dossier_Conformite.xlsx  RoboSafe_KPI_ROI_Model.xlsx  RoboSafe_Pack_Pilote_Soudage_MIG.xlsx
monitoring/: prometheus.yml
scripts/: setup_windows.ps1
src/robosafe/: __init__.py  cli.py  integration.py  main.py
src/robosafe/agents/: __init__.py  analysis_agent.py  base_agent.py  decision_agent.py  orchestrator_agent.py  perception_agent.py
src/robosafe/api/: __init__.py  metrics.py  server.py  websocket_manager.py
src/robosafe/api/static/: dashboard.html
src/robosafe/core/: __init__.py  rule_engine.py  signal_manager.py  state_machine.py
src/robosafe/rules/: __init__.py
src/robosafe/safety/: __init__.py
src/robosafe/sensors/: __init__.py  fumes_sensor.py  plc_siemens.py  robot_fanuc.py  scanner_sick.py  vision_ai.py
src/robosafe/utils/: config.py  logger.py
tests/: conftest.py
tests/integration/: test_safety_scenarios.py
tests/unit/: test_agents.py  test_api.py  test_sensors.py  test_state_machine.py  test_vision.py
